--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,3 +11,5 @@ miniconda_environments: []
 #   - name: my_virtual_env
 #     python_version: 2.7
 #     pkgs: 'pip pyyaml numpy'
+
+miniconda_channels: []
