--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,7 @@
 # vars file for miniconda
 miniconda_installer:
   url: 'http://repo.continuum.io/miniconda'
-  file: 'Miniconda3-3.0.0-Linux-x86_64.sh'
+  file: 'Miniconda3-latest-Linux-x86_64.sh'
 
 miniconda_path: '~/.miniconda'
 
